<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <RelativeLayout
            android:id="@+id/view_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/delete_swipe_row_background">
        <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="@dimen/ic_delete"
                android:layout_height="@dimen/ic_delete"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/padding_10"
                android:src="@drawable/ic_delete_white_24dp"
                android:contentDescription="@string/delete_icon"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/padding_10"
                android:layout_toStartOf="@id/delete_icon"
                android:text="@string/delete"
                android:textColor="#fff"
                android:textSize="13sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/view_foreground"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:background="@android:color/white"
        android:padding="@dimen/padding_10">
        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="150sp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/activity_padding_horizontal"
            android:scaleType="centerCrop"
            android:contentDescription="@string/saved_article_photo"/>
        <TextView
            android:id="@+id/item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/thumbnail"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:textColor="@color/description"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_number"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/thumbnail"
            android:textColor="@color/description"
            android:textSize="17sp"/>
    </RelativeLayout>
</FrameLayout>
