<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controller.ArticleActivity">
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10sp"
            android:paddingEnd="10sp"
            android:paddingTop="20sp"
            android:paddingBottom="10sp"
    >
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:titleTextColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_primary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleMarginEnd="64dp"
                    app:expandedTitleMarginStart="48dp"
                    app:expandedTitleTextAppearance="@android:color/transparent"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                >
                    <TextView
                            android:id="@+id/title_text"
                            android:layout_width="300sp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/title_of_place_here"
                            android:textColor="@android:color/white"
                            android:textSize="@dimen/backdrop_title"
                    />
                    <ImageButton
                        android:id="@+id/add_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_favorite_border_40dp"
                        android:background="@color/color_primary"
                        android:clickable="true"
                        android:contentDescription="@string/add_to_favorite"
                        android:focusable="true"
                    />
                </LinearLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/appbar"
            android:layout_alignParentBottom="true"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables"
                android:layout_marginTop="80sp"
        >
            <ImageView
                    android:id="@+id/top_image"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/no_image_available"
                    android:contentDescription="@string/article_picture"
            />
            <TextView
                    android:layout_marginTop="20dp"
                    android:id="@+id/htmlToTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20sp"
                    android:layout_marginEnd="20sp"
                    android:layout_marginBottom="100sp"
            />
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>